--- a/client/src/Components/WordCard/WordCard.module.css
+++ b/client/src/Components/WordCard/WordCard.module.css
@@ -1,8 +1,7 @@
 .wrapper {
   max-width: 1500px;
   width: 100%;
-  max-height: 600px;
-  height: 100%;
+  height: 550px;
   border: 1px solid;
   border-radius: 20px;
   padding: 100px 50px;
@@ -31,7 +30,6 @@
 
 .button {
   background-color: transparent;
-  border: none;
   cursor: pointer;
   font-size: 30px;
   border: 1px solid;
@@ -52,6 +50,17 @@
   text-align: center;
 }
 
+.plus {
+  position: fixed;
+  bottom: 50px;
+  right: 80px;
+  width: 80px;
+  height: 80px;
+  font-size: 50px;
+  padding: 0;
+  border-radius: 50px;
+}
+
 @media (hover: hover) {
   .button:hover {
     background-color: #0000000c;
@@ -60,7 +69,7 @@
 
 @media (max-width: 1024px) {
   .wrapper {
-    max-height: 450px;
+    max-height: 400px;
     padding: 60px 20px;
   }
 
@@ -78,5 +87,13 @@
 
   .end {
     font-size: 40px;
+  }
+
+  .plus {
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
   }
 }
